refactor: Switched to virtual threads in HttpServer. Replaced fixed thread pool.